feat: added multiples things, fixed multiple others