@@ -31,7 +31,7 @@ public class UpdateVideoGameUseCase {
       log.info("[STOP] updateVideoGame");
       throw new NoSuchElementException("The videogame is not registered");
     }
-    List<Comment> updatedComments =  videogame.getComments().stream().map(comment -> addNewComment(comment,videogame.getName())).collect(Collectors.toList());
+    List<Comment> updatedComments =  videogame.getComments().stream().map(comment -> addNewComment(comment,videogame.getName())).toList();
     videogame.getComments().removeAll(videogame.getComments());
     videogame.getComments().addAll(updatedComments);
     log.info("[STOP] updateVideoGame");
