@@ -34,7 +34,7 @@ public class ClassificationAdapter {
   }
 
   public List<Classification> findAll() {
-    return repo.findAll().stream().map(entity -> mapper.fromEntityToDomain(entity)).collect(Collectors.toList());
+    return repo.findAll().stream().map(entity -> mapper.fromEntityToDomain(entity)).toList();
   }
 
   public Classification update(Classification classification) {
